Fixed issue with flickering Tv box

--- a/src/App.css
+++ b/src/App.css
@@ -368,7 +368,9 @@ body:not(:has(.nav-bar.closed)) .mail-button.scrolled:hover {
     width: 250px;
     border-radius: 16px;
     margin-right: -2px;
-    background: #000;
+    background-image: url(gifs/static-gif.gif);
+    background-position: center;
+    background-size: contain;
     filter: drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.3));
 }
 
